--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 
     <input type="text" id="Plaintext">
     <input type="number" id="Steps">
-    <button id="Encrypt">Encrypt</button>
-    <button id="Decrypt">Decrypt</button>
+    <button id="Encrypt" onclick="encrypt()">Encrypt</button>
+    <button id="Decrypt" onclick="decrypt()">Decrypt</button>
     <div id="TextArea"></div>
 
     <script src="./script.js"></script>
