--- a/index.html
+++ b/index.html
@@ -4,14 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="./style.css">
     <title>Document</title>
 </head>
 <body>
-
-    <input type="text" id="Plaintext">
-    <input type="number" id="Steps">
-    <button id="Encrypt">Encrypt</button>
-    <button id="Decrypt">Decrypt</button>
+<h1>Caesar's Cypher generator</h1>
+<div class="text-box">
+    <label for="message">Enter your message to encrypt or decrypt</label>
+    <textarea name="message" id="#Plaintext" cols="30" rows="10"></textarea>
+</div>    
+<div class="text-box">
+    <label for="steps">How many steps do you want to use</label>
+    <input name="steps" type="number" id="Steps">
+</div>
+<div class="btn-box">
+    <span class="btn" id="Encrypt" onclick="encrypt()">Encrypt</span>
+    <span class="btn" id="Decrypt" onclick="decrypt()">Decrypt</span>
+</div>
+    
     <div id="TextArea"></div>
 
     <script src="./script.js"></script>
