--- a/index.html
+++ b/index.html
@@ -4,14 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link href="https://fonts.googleapis.com/css?family=Roboto+Mono&display=swap" rel="stylesheet">
+    <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="./style.css">
-    <title>Document</title>
+    <title>Caesars cypher</title>
 </head>
 <body>
 <h1>Caesar's Cypher generator</h1>
 <div class="text-box">
     <label for="message">Enter your message to encrypt or decrypt</label>
-    <textarea name="message" id="#Plaintext" cols="30" rows="10"></textarea>
+    <textarea cols="100" name="message" id="Plaintext" rows="5"></textarea>
 </div>    
 <div class="text-box">
     <label for="steps">How many steps do you want to use</label>
@@ -22,7 +24,7 @@
     <span class="btn" id="Decrypt" onclick="decrypt()">Decrypt</span>
 </div>
     
-    <div id="TextArea"></div>
+    <textarea cols="100" rows="5" readonly id="TextArea" placeholder="Your output goes here"></textarea>
 
     <script src="./script.js"></script>
 </body>
