--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </div>    
 <div class="text-box">
     <label for="steps">How many steps do you want to use</label>
-    <input name="steps" type="number" min="1" value="1" id="Steps">
+    <input name="steps" type="number" min="1" value="1" id="Steps" onfocusout="preventError()">
 </div>
 <div class="btn-box">
     <span class="btn" id="Encrypt" onclick="encrypt()">Encrypt</span>
